--- a/06a-data-join-flat.ipynb
+++ b/06a-data-join-flat.ipynb
@@ -5,7 +5,7 @@
    "id": "7bec28d7",
    "metadata": {},
    "source": [
-    "__собираем данные__\n",
+    "__собираем предложения по квартирам__\n",
     "\n",
     "_Evgeny S. Borisov <parser@mechanoid.su>_"
    ]
@@ -145,20 +145,6 @@
     "        if re.match(r'.+\\.xlsx$',f)\n",
     "    ])\n",
     "raw_data_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7bd74347",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for f in raw_data_files:\n",
-    "#     df = pd.read_excel(f)\n",
-    "#     df['place']='sevastopol'\n",
-    "#     df.to_excel(f,index=False)\n",
-    "#     print(f)"
    ]
   },
   {
@@ -342,20 +328,6 @@
     "    \n",
     "    ])\n",
     "raw_data_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "f3237189",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for f in raw_data_files:\n",
-    "#     df = pd.read_pickle(f)\n",
-    "#     df['place']='sevastopol'\n",
-    "#     df.to_pickle(f)\n",
-    "#     print(f)"
    ]
   },
   {
@@ -672,14 +644,14 @@
     "\n",
     "data['adr'] = AddressTransformer().transform( data['adr'] )\n",
     "\n",
-    "places = {\n",
+    "places = { # поле 'place' и название города\n",
     "#'bahchisaray': 'Бахчисарай,',\n",
     "#      'sudak': 'Судак,',\n",
     " 'sevastopol': 'Севастополь,',\n",
     "}\n",
     "\n",
     "for k,v in places.items():\n",
-    "    print(k,v)\n",
+    "    print(k,v) # докидываем в строку адреса название города если его нет\n",
     "    f =  (data['place']==k) & (~data['adr'].str.match(v))\n",
     "    data.loc[f,'adr'] = v +' '+ data.loc[f,'adr']"
    ]
@@ -726,13 +698,10 @@
    "outputs": [],
    "source": [
     "# from lib.locator import LocationUpdater\n",
-    "# from lib.locator import AddressTransformerSev\n",
     "\n",
     "# loc_file_path = 'data/location.pkl'# таблица адресов\n",
     "\n",
-    "# loc = LocationUpdater(\n",
-    "#         address_transformer=AddressTransformerSev(),\n",
-    "#     ).transform(\n",
+    "# loc = LocationUpdater().transform( по умолчанию пользуем OSM geocoder \n",
     "#         adr=data['adr'],\n",
     "#         loc=pd.read_pickle(loc_file_path),\n",
     "#         show_pbar=True,\n",
@@ -919,203 +888,6 @@
    ],
    "source": [
     "data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13de0b35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for f in raw_data_files:\n",
-    "#     ts = dtm.strptime( re.sub(r'.*/avito_','',f), '%Y-%m-%d_%H-%M_raw.xlsx')\n",
-    "#     df = pd.read_excel(f)\n",
-    "#     df['ts'] = ts\n",
-    "#     df.to_excel(f,index=False)\n",
-    "#     print(ts)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bbcec108",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "688f413a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from tqdm.notebook import tqdm\n",
-    "# import pandas as pd\n",
-    "# tqdm.pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62a527f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# result_file_path = 'data/data_flat.pkl'\n",
-    "# data = pd.read_pickle(result_file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da77ed33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data[ data['longitude'].isnull() ][['title','adr','latitude','longitude']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0aad043a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from lib.locator import LocationUpdater\n",
-    "# from lib.locator import AddressTransformerSev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0fd7ba6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# adr = data[ data['longitude'].isnull() ].sample(10)[['adr']]\n",
-    "# adr['adr_'] = AddressTransformerSev().transform(adr['adr'])\n",
-    "# adr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92034060",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from geopy.geocoders import Nominatim\n",
-    "\n",
-    "# user_agent='Mozilla/5.0 (Windows NT 10.0; rv:91.0) Gecko/20100101 Firefox/91.0'\n",
-    "# geolocator = Nominatim(user_agent=user_agent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e618c2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# adr['adr_']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ef14bcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def coo(s,geolocator=geolocator):\n",
-    "#     loc = geolocator.geocode(s)\n",
-    "#     if not (loc is None):\n",
-    "#         return { 'latitude':loc.latitude,'longitude':loc.longitude}\n",
-    "#     return None\n",
-    "    \n",
-    "# adr['adr_'].progress_apply( coo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a2529c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loc_file_path = 'data/location.pkl'# таблица адресов"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77c1760d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loc = LocationUpdater(\n",
-    "#         address_transformer=AddressTransformerSev(),\n",
-    "#     ).transform(\n",
-    "#         adr=adr['adr'],\n",
-    "#         loc=pd.read_pickle(loc_file_path),\n",
-    "#         show_pbar=True,\n",
-    "#     )\n",
-    "\n",
-    "# loc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25830926",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loc=pd.read_pickle(loc_file_path)\n",
-    "# loc[loc['longitude'].isnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8828c9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26d21fcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from lib.locator import AddressTransformer\n",
-    "\n",
-    "# data['adr_'] = AddressTransformer().transform( data['adr'] )\n",
-    "\n",
-    "# places = {\n",
-    "# #'bahchisaray': 'Бахчисарай',\n",
-    "# #      'sudak': 'Судак',\n",
-    "#  'sevastopol': 'Севастополь,',\n",
-    "# }\n",
-    "\n",
-    "# for k,v in places.items():\n",
-    "#     print(k,v)\n",
-    "#     f =  (data['place']==k) & (~data['adr_'].str.match(v))\n",
-    "#     data.loc[f,'adr_'] = v +' '+ data.loc[f,'adr_']\n",
-    "\n",
-    "# loc_file_path = 'data/location.pkl'# таблица адресов\n",
-    "\n",
-    "# loc = pd.read_pickle(loc_file_path)\n",
-    "\n",
-    "# loc_ = data[['adr','adr_']].merge(loc,on='adr')\n",
-    "\n",
-    "# loc = pd.concat([loc_[['adr_','latitude','longitude']].rename(columns={'adr_':'adr'}),loc ]).drop_duplicates()\n",
-    "# loc.reset_index(drop=True).to_pickle(loc_file_path)"
    ]
   }
  ],
