--- a/06c-data-join-house.ipynb
+++ b/06c-data-join-house.ipynb
@@ -5,7 +5,7 @@
    "id": "7bec28d7",
    "metadata": {},
    "source": [
-    "__собираем данные__\n",
+    "__собираем предложения о продаже домов__\n",
     "\n",
     "_Evgeny S. Borisov <parser@mechanoid.su>_"
    ]
@@ -669,65 +669,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "8ef8e77a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data = data.sample(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "0c2ca700",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pandas as pd\n",
-    "# loc_file_path = 'data/location_yandex.pkl'# таблица адресов\n",
-    "# df=pd.read_pickle(loc_file_path)\n",
-    "# # df\n",
-    "\n",
-    "# df['latitude_'] =  df['latitude']\n",
-    "# df['latitude']  =  df['longitude']\n",
-    "# df['longitude'] = df['latitude_']\n",
-    "# df = df.drop(columns=['latitude_',])\n",
-    "\n",
-    "# df.to_pickle(loc_file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "c6c42394",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from lib.locator import LocationUpdater\n",
-    "# from lib.locator import AddressTransformerSev\n",
-    "\n",
-    "# loc_file_path = 'data/location.pkl'# таблица адресов\n",
-    "\n",
-    "# loc = LocationUpdater(\n",
-    "#         address_transformer=AddressTransformerSev(),\n",
-    "#     ).transform(\n",
-    "#         adr=data.sample(3)['adr'],\n",
-    "#         loc=pd.read_pickle(loc_file_path.pkl'),\n",
-    "#         show_pbar=True,\n",
-    "#     )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "167d4343",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "id": "c010ee57",
    "metadata": {},
@@ -747,14 +688,14 @@
     "\n",
     "data['adr'] = AddressTransformer().transform( data['adr'] )\n",
     "\n",
-    "places = {\n",
+    "places = { # поле 'place' и название города\n",
     "'bahchisaray': 'Бахчисарай,',\n",
     "      'sudak': 'Судак,',\n",
     " 'sevastopol': 'Севастополь,',\n",
     "}\n",
     "\n",
     "for k,v in places.items():\n",
-    "    print(k,v)\n",
+    "    print(k,v) # докидываем в строку адреса название города если его нет\n",
     "    f =  (data['place']==k) & (~data['adr'].str.match(v))\n",
     "    data.loc[f,'adr'] = v +' '+ data.loc[f,'adr']"
    ]
@@ -1130,255 +1071,6 @@
    "source": [
     "data.info()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13de0b35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for f in raw_data_files:\n",
-    "#     ts = dtm.strptime( re.sub(r'.*/avito_','',f), '%Y-%m-%d_%H-%M_raw.xlsx')\n",
-    "#     df = pd.read_excel(f)\n",
-    "#     df['ts'] = ts\n",
-    "#     df.to_excel(f,index=False)\n",
-    "#     print(ts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e318218",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class AvitoDataCleanerRealtyLand:\n",
-    "    \n",
-    "#     def transform(self,data):\n",
-    "#         df = data.copy()\n",
-    "        \n",
-    "#         symb_lat = 'yexapocEXAPOCTHKBM'\n",
-    "#         symb_rus = 'уехаросЕХАРОСТНКВМ'\n",
-    "#         l2r = str.maketrans(symb_lat,symb_rus) \n",
-    "        \n",
-    "#         df['title'] = df['title'].str.extract( r'«(.*)»',expand=False).apply(lambda s: s.translate(l2r) )\n",
-    "        \n",
-    "#         area = df['title'].str.extract( r'(\\d+,?\\d*)\\s*(сот|га)',expand=True)\n",
-    "#         area.columns=['area','area_unit']\n",
-    "#         df = pd.concat([df,area],axis=1)\n",
-    "                       \n",
-    "#         df['is_IJS'] = df['title'].str.lower().str.match(r'.*ижс.*')\n",
-    "#         df['obj_name'] = df['obj_name'].fillna('')\n",
-    "#         df['price'] = df['price'].astype(int)\n",
-    "#         df['priceM'] = df['price']/1e6\n",
-    "        \n",
-    "#         df['area'] = df['area'].fillna('0.').str.replace(',','.').astype(float)\n",
-    "        \n",
-    "#         df.loc[ df['area_unit']=='га', 'area' ] = df.query('area_unit==\"га\"')['area']*100.\n",
-    "#         df = df.drop(columns=['area_unit'])\n",
-    "        \n",
-    "#         return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "815aa760",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_avito['title'].str.extract( r'(\\d+,?\\d*)\\s*(сот|га)',expand=True) #, columns=['a','b'])\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61a0a534",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # import re\n",
-    "# # s='Участок 9,7 сот. (ИЖС)'\n",
-    "# s='Участок 7,8 сот. (ИЖС)'\n",
-    "# s='Участок 7,8 га. (ИЖС)'\n",
-    "\n",
-    "# s='Участок 7,8 м. (ИЖС)'\n",
-    "\n",
-    "# # s='Участок 5 сот. (ИЖС)'\n",
-    "\n",
-    "# re.search( r'(\\d+,?\\d*)\\s*(сот|га)',s) #.group(1)\n",
-    "\n",
-    "# # # len(s)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8085fd61",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e842691e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## собираем данные циан.ру"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bbc15d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import re\n",
-    "# from os import listdir\n",
-    "\n",
-    "# raw_data_files = sorted([\n",
-    "#         cian_raw_data_path+'/'+f \n",
-    "#         for f in listdir(cian_raw_data_path) \n",
-    "#         if re.match(r'.+\\.pkl$',f)\n",
-    "#         #if re.match(r'.+\\.xlsx$',f)\n",
-    "    \n",
-    "#     ])\n",
-    "# raw_data_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbb04ed6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_cian = pd.concat([\n",
-    "#         # pd.read_excel(f)\n",
-    "#         pd.read_pickle(f)\n",
-    "#          .dropna()\n",
-    "#          .drop_duplicates(['LinkArea','Description',])\n",
-    "#          .rename(columns={'page':'cian_page'})\n",
-    "#          .reset_index(drop=True)  \n",
-    "#         for f in raw_data_files\n",
-    "#     ]).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f08946fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_cian.info(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da514473",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# swap_title = data_cian['OfferSubtitle'].str.match(r'.*\\d+ м², \\d+/\\d+ эт.*') \n",
-    "\n",
-    "# data_cian = pd.concat([\n",
-    "#         data_cian[ ~swap_title ],\n",
-    "#         data_cian[ swap_title ]\n",
-    "#             .rename(columns={'OfferTitle':'OfferSubtitle','OfferSubtitle':'OfferTitle'})\n",
-    "#     ]).reset_index(drop=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fdef74c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_cian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ad64605",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from lib.cian import CianDataCleaner\n",
-    "\n",
-    "# data_cian = CianDataCleaner().transform( data_cian )\n",
-    "\n",
-    "# print(len(data_cian))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19f2f9da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# assert len(data_cian)>0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d933b8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_cian.info(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f29d3b58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_cian\n",
-    "# data_cian.query('nrooms==0')\n",
-    "# data_cian[ data_cian['title'].str.len()<1 ]\n",
-    "# data_cian[ data_cian['obj_name'].str.len()>0 ][['title','obj_name',]] # .to_csv('tmp/cian_title.csv',sep='\\t')|"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21467270",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1723d97b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data = pd.concat([data_avito,data_cian]).reset_index(drop=True) \n",
-    "# print(len(data))\n",
-    "# assert len(data)>0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd6ec720",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
