--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -5,7 +5,7 @@
    "id": "7bec28d7",
    "metadata": {},
    "source": [
-    "__применение парсера объявлений авито.ru__\n",
+    "__качаем объявления о продаже земельных участков с авито.ru__\n",
     "\n",
     "_Evgeny S. Borisov <parser@mechanoid.su>_"
    ]
@@ -116,40 +116,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-15 10:30:11 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-15 10:30:11 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-15 10:30:13 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-15 10:30:13 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-15 10:30:18 | AvitoParser: 23 pages for read\n",
-      "[INFO    ] 2022-09-15 10:30:18 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-15 10:30:21 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-15 10:30:25 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-15 10:30:29 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-15 10:30:32 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-15 10:30:35 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-15 10:30:38 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-15 10:30:41 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-15 10:30:45 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-15 10:30:48 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-15 10:30:51 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-15 10:30:54 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-15 10:30:57 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-15 10:30:59 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-15 10:31:02 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-15 10:31:04 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-15 10:31:07 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-15 10:31:10 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-15 10:31:12 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-15 10:31:15 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-15 10:31:18 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-15 10:31:20 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-15 10:31:22 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-15 10:31:26 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-15 10:31:26 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-15 10:31:26 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "1127\n",
-      "CPU times: user 4.43 s, sys: 152 ms, total: 4.58 s\n",
-      "Wall time: 1min 15s\n"
+      "[INFO    ] 2022-09-16 15:09:00 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-16 15:09:00 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-16 15:09:03 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-16 15:09:03 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-16 15:09:08 | AvitoParser: 23 pages for read\n",
+      "[INFO    ] 2022-09-16 15:09:08 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-16 15:09:13 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-16 15:09:17 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-16 15:09:22 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-16 15:09:25 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-16 15:09:29 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-16 15:09:33 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-16 15:09:38 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-16 15:09:44 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-16 15:09:47 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-16 15:09:54 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-16 15:09:57 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-16 15:10:02 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-16 15:10:05 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-16 15:10:08 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-16 15:10:11 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-16 15:10:14 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-16 15:10:17 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-16 15:10:21 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-16 15:10:23 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-16 15:10:26 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-16 15:10:29 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-16 15:10:32 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-16 15:10:34 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-16 15:10:34 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-16 15:10:34 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "1114\n",
+      "CPU times: user 4.52 s, sys: 175 ms, total: 4.7 s\n",
+      "Wall time: 1min 34s\n"
      ]
     }
    ],
@@ -177,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1127\n",
-      "1121\n"
+      "1114\n",
+      "1100\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "76681b12",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6fa322a2",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "bcd426ee",
    "metadata": {},
    "outputs": [
@@ -245,54 +245,61 @@
        "      <th>description</th>\n",
        "      <th>page</th>\n",
        "      <th>ts</th>\n",
+       "      <th>place</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>528</th>\n",
-       "      <td>2317736674</td>\n",
-       "      <td>Объявление «Участок 7 сот. (ИЖС)»</td>\n",
-       "      <td>2700000</td>\n",
+       "      <th>454</th>\n",
+       "      <td>2518461426</td>\n",
+       "      <td>Объявление «Участок 25 сот. (ИЖС)» 5 фотографий</td>\n",
+       "      <td>800000</td>\n",
        "      <td></td>\n",
-       "      <td>Нахимовский муниципальный округ, посёлок Любимовка</td>\n",
-       "      <td>Продам свой участок, свет подведен на участок, газ и вода можно подвести. \\n\\nТорг с реальным покупателем.\\n\\nАгентов просьба не беспокоить.</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2022-09-15 10:31:26.038609</td>\n",
+       "      <td>Республика Крым, Бахчисарайский район, Песчановское сельское поселение</td>\n",
+       "      <td>Хотите купить участок рядом с морем?! \\nТогда заходите к нам в гости! \\n\\nПредлагаем Участок площадью 25 соток Лпх ( личное подсобное хозяйство), с. Песчаное, Бахчисарайский район, расположенный 35 км от Симферополя, 25 км. От Бахчисарая и всего 1,5 км. До мо</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2022-09-16 15:10:34.058911</td>\n",
+       "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>2399408010</td>\n",
-       "      <td>Объявление «Участок 11 сот. (ИЖС)» 3 фотографии</td>\n",
-       "      <td>4000000</td>\n",
+       "      <th>153</th>\n",
+       "      <td>2509245137</td>\n",
+       "      <td>Объявление «Участок 9,3 сот. (ИЖС)» 4 фотографии</td>\n",
+       "      <td>5800000</td>\n",
        "      <td></td>\n",
-       "      <td>с. Тыловое, Ялтинская ул., 2</td>\n",
-       "      <td>СРОЧНО.СОБСТВЕННИК.Продам шикарный ровный участок под ИЖС ,с видом на горы в Байдарской долине.Рядом два живописных озера,отличные подъезд,5 минут пешком до Ялтинской трассы.Коммуникации вдоль участка.Документы,госакт в наличии.Без посредника,агенства прош</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2022-09-15 10:31:26.038609</td>\n",
+       "      <td>ул. Бориса Шейнина, 60</td>\n",
+       "      <td>Расположение: \\n\\nПродам земельный участок Ижс с великолепным видом на море и сосновый лес. \\n\\nУчасток крайний на улице, что дает преимущество в виде отсутствия соседей с одной из сторон. \\n\\nХарактеристики земельного участка: \\n\\n-Электричество-15 Квт.\\n\\n-Водосна</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2022-09-16 15:10:34.058911</td>\n",
+       "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                            title    price  \\\n",
-       "528  2317736674               Объявление «Участок 7 сот. (ИЖС)»   2700000   \n",
-       "78   2399408010  Объявление «Участок 11 сот. (ИЖС)» 3 фотографии  4000000   \n",
+       "       avito_id                                             title    price  \\\n",
+       "454  2518461426   Объявление «Участок 25 сот. (ИЖС)» 5 фотографий   800000   \n",
+       "153  2509245137  Объявление «Участок 9,3 сот. (ИЖС)» 4 фотографии  5800000   \n",
        "\n",
-       "    obj_name                                                 adr  \\\n",
-       "528           Нахимовский муниципальный округ, посёлок Любимовка   \n",
-       "78                                  с. Тыловое, Ялтинская ул., 2   \n",
+       "    obj_name  \\\n",
+       "454            \n",
+       "153            \n",
        "\n",
-       "                                                                                                                                                                                                                                                          description  \\\n",
-       "528                                                                                                                      Продам свой участок, свет подведен на участок, газ и вода можно подвести. \\n\\nТорг с реальным покупателем.\\n\\nАгентов просьба не беспокоить.   \n",
-       "78   СРОЧНО.СОБСТВЕННИК.Продам шикарный ровный участок под ИЖС ,с видом на горы в Байдарской долине.Рядом два живописных озера,отличные подъезд,5 минут пешком до Ялтинской трассы.Коммуникации вдоль участка.Документы,госакт в наличии.Без посредника,агенства прош   \n",
+       "                                                                        adr  \\\n",
+       "454  Республика Крым, Бахчисарайский район, Песчановское сельское поселение   \n",
+       "153                                                  ул. Бориса Шейнина, 60   \n",
        "\n",
-       "     page                         ts  \n",
-       "528    11 2022-09-15 10:31:26.038609  \n",
-       "78      2 2022-09-15 10:31:26.038609  "
+       "                                                                                                                                                                                                                                                                    description  \\\n",
+       "454         Хотите купить участок рядом с морем?! \\nТогда заходите к нам в гости! \\n\\nПредлагаем Участок площадью 25 соток Лпх ( личное подсобное хозяйство), с. Песчаное, Бахчисарайский район, расположенный 35 км от Симферополя, 25 км. От Бахчисарая и всего 1,5 км. До мо   \n",
+       "153  Расположение: \\n\\nПродам земельный участок Ижс с великолепным видом на море и сосновый лес. \\n\\nУчасток крайний на улице, что дает преимущество в виде отсутствия соседей с одной из сторон. \\n\\nХарактеристики земельного участка: \\n\\n-Электричество-15 Квт.\\n\\n-Водосна   \n",
+       "\n",
+       "     page                         ts       place  \n",
+       "454    10 2022-09-16 15:10:34.058911  sevastopol  \n",
+       "153     4 2022-09-16 15:10:34.058911  sevastopol  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
