--- a/06b-data-join-land.ipynb
+++ b/06b-data-join-land.ipynb
@@ -118,7 +118,8 @@
        "['data/raw/land/avito/avito_2022-09-08_16-05_raw.xlsx',\n",
        " 'data/raw/land/avito/avito_2022-09-12_13-51_raw.xlsx',\n",
        " 'data/raw/land/avito/avito_2022-09-13_13-56_raw.xlsx',\n",
-       " 'data/raw/land/avito/avito_2022-09-15_10-31_raw.xlsx']"
+       " 'data/raw/land/avito/avito_2022-09-15_10-31_raw.xlsx',\n",
+       " 'data/raw/land/avito/avito_2022-09-16_15-10_raw.xlsx']"
       ]
      },
      "execution_count": 6,
@@ -162,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4415\n"
+      "5515\n"
      ]
     }
    ],
@@ -200,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4415\n"
+      "5515\n"
      ]
     }
    ],
@@ -257,85 +258,85 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>2461519928</td>\n",
-       "      <td>Участок 6 сот. (ИЖС)</td>\n",
-       "      <td>3000000</td>\n",
+       "      <th>3949</th>\n",
+       "      <td>1026615293</td>\n",
+       "      <td>Участок 6,5 сот. (ИЖС)</td>\n",
+       "      <td>5800000</td>\n",
        "      <td></td>\n",
-       "      <td>товарищество собственников недвижимости Лабораторная Балка</td>\n",
-       "      <td>Продам свой участок в перспективном месте, рядом с центром. \\nЕсть небольшой уклон, свет подключён, вода городская, круглогодично. Жилого дома нет. \\nЗабор в круг старая рабица, нужно поднимать. \\nВсе вопросы по телефону. \\nАгентам прошу не звонить, сам работа</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2022-09-08 16:04:40.227</td>\n",
+       "      <td>садоводческое товарищество Сатурн, аллея Защитников 35-й Батареи</td>\n",
+       "      <td>Продается участок 6,5 сот. На Алее Защитников 35 батареи, в первой линии Казачинского шоссе. Участок расположен в Казачьей бухте, рядом 35 батарея, ровный, имеет прямоугольную форму. Получено Гпзу, строить можно — жилой дом в высоту 8 м.! \\n\\nИмеются сети —</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2022-09-15 10:31:26.039</td>\n",
        "      <td>sevastopol</td>\n",
-       "      <td>6.00</td>\n",
+       "      <td>6.50</td>\n",
        "      <td>True</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>0.50</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>0.89</td>\n",
        "      <td>4-8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2678</th>\n",
-       "      <td>2514588998</td>\n",
-       "      <td>Участок 5 сот. (ИЖС)</td>\n",
-       "      <td>2000000</td>\n",
-       "      <td></td>\n",
-       "      <td>пос. городского типа Кача, ул. Константина Арцеулова</td>\n",
-       "      <td>Продается участок под Ижс в поселке Кача. Ул. Константина Арцеулова д.1. Удобное месторасположение: подъезд с 3-х сторон, тихое место, до моря 15 мин. Пешком. Хороший торг при осмотре уместен.</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2022-09-13 13:56:54.600</td>\n",
-       "      <td>sevastopol</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>4-8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>2279307179</td>\n",
+       "      <th>5356</th>\n",
+       "      <td>2247568188</td>\n",
        "      <td>Участок 10 сот. (ИЖС)</td>\n",
-       "      <td>3000000</td>\n",
+       "      <td>11000000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Разведчика Колобуна</td>\n",
-       "      <td>Продажа земельного участка 10 соток — Ижс без Комиссии для Покупателя. \\n\\nКадастровый номер 91:04:002013:27.\\n\\nКатегория земель: Земли поселений (земли населенных пунктов). \\n\\nЕсть возможность разделить участок на 4, 5, 6 или 7 соток за 300 тысяч рублей одна</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2022-09-08 16:04:40.227</td>\n",
+       "      <td>ул. Абазы</td>\n",
+       "      <td>Продаю свой учacтoк Ижс в районe 5 км., \\npaспoложeнный нa улицe Aбазы, 47! \\nУчасток paспoложен рядoм c пpиродным пapкoм Mакcимoвa Дaчa. \\n\\nCoceди пo учaстку уже пoстpoились и прoживают. \\nЧистый воздуx! На участке рacтут cocны. В 3 мин xодьбы достраиваются ш</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2022-09-16 15:10:34.059</td>\n",
        "      <td>sevastopol</td>\n",
        "      <td>10.00</td>\n",
        "      <td>True</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>0.30</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>1.10</td>\n",
        "      <td>8-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3533</th>\n",
+       "      <td>2447720155</td>\n",
+       "      <td>Участок 8 сот. (ИЖС)</td>\n",
+       "      <td>4800000</td>\n",
+       "      <td></td>\n",
+       "      <td>с. Андреевка, Усадебная ул., 19</td>\n",
+       "      <td>Продам земельный участок в живописном тихом уголке Крыма, г. Севастополь \\n\\nУчасток юридически чистый есть полный комплект документов, готов к строительству, подведено электричество.\\n\\n с. Андреевка, с развитой инфраструктурой , есть все что может потребоват</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022-09-15 10:31:26.039</td>\n",
+       "      <td>sevastopol</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>4-8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                  title    price obj_name  \\\n",
-       "207   2461519928   Участок 6 сот. (ИЖС)  3000000            \n",
-       "2678  2514588998   Участок 5 сот. (ИЖС)  2000000            \n",
-       "80    2279307179  Участок 10 сот. (ИЖС)  3000000            \n",
+       "        avito_id                   title     price obj_name  \\\n",
+       "3949  1026615293  Участок 6,5 сот. (ИЖС)   5800000            \n",
+       "5356  2247568188   Участок 10 сот. (ИЖС)  11000000            \n",
+       "3533  2447720155    Участок 8 сот. (ИЖС)   4800000            \n",
        "\n",
-       "                                                             adr  \\\n",
-       "207   товарищество собственников недвижимости Лабораторная Балка   \n",
-       "2678        пос. городского типа Кача, ул. Константина Арцеулова   \n",
-       "80                                       ул. Разведчика Колобуна   \n",
+       "                                                                   adr  \\\n",
+       "3949  садоводческое товарищество Сатурн, аллея Защитников 35-й Батареи   \n",
+       "5356                                                         ул. Абазы   \n",
+       "3533                                   с. Андреевка, Усадебная ул., 19   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                 description  \\\n",
-       "207     Продам свой участок в перспективном месте, рядом с центром. \\nЕсть небольшой уклон, свет подключён, вода городская, круглогодично. Жилого дома нет. \\nЗабор в круг старая рабица, нужно поднимать. \\nВсе вопросы по телефону. \\nАгентам прошу не звонить, сам работа   \n",
-       "2678                                                                        Продается участок под Ижс в поселке Кача. Ул. Константина Арцеулова д.1. Удобное месторасположение: подъезд с 3-х сторон, тихое место, до моря 15 мин. Пешком. Хороший торг при осмотре уместен.   \n",
-       "80    Продажа земельного участка 10 соток — Ижс без Комиссии для Покупателя. \\n\\nКадастровый номер 91:04:002013:27.\\n\\nКатегория земель: Земли поселений (земли населенных пунктов). \\n\\nЕсть возможность разделить участок на 4, 5, 6 или 7 соток за 300 тысяч рублей одна    \n",
+       "                                                                                                                                                                                                                                                                description  \\\n",
+       "3949     Продается участок 6,5 сот. На Алее Защитников 35 батареи, в первой линии Казачинского шоссе. Участок расположен в Казачьей бухте, рядом 35 батарея, ровный, имеет прямоугольную форму. Получено Гпзу, строить можно — жилой дом в высоту 8 м.! \\n\\nИмеются сети —    \n",
+       "5356  Продаю свой учacтoк Ижс в районe 5 км., \\npaспoложeнный нa улицe Aбазы, 47! \\nУчасток paспoложен рядoм c пpиродным пapкoм Mакcимoвa Дaчa. \\n\\nCoceди пo учaстку уже пoстpoились и прoживают. \\nЧистый воздуx! На участке рacтут cocны. В 3 мин xодьбы достраиваются ш   \n",
+       "3533   Продам земельный участок в живописном тихом уголке Крыма, г. Севастополь \\n\\nУчасток юридически чистый есть полный комплект документов, готов к строительству, подведено электричество.\\n\\n с. Андреевка, с развитой инфраструктурой , есть все что может потребоват   \n",
        "\n",
        "      avito_page                      ts       place  area  is_IJS  priceM  \\\n",
-       "207            6 2022-09-08 16:04:40.227  sevastopol  6.00    True    3.00   \n",
-       "2678          11 2022-09-13 13:56:54.600  sevastopol  5.00    True    2.00   \n",
-       "80             2 2022-09-08 16:04:40.227  sevastopol 10.00    True    3.00   \n",
+       "3949          14 2022-09-15 10:31:26.039  sevastopol  6.50    True    5.80   \n",
+       "5356          20 2022-09-16 15:10:34.059  sevastopol 10.00    True   11.00   \n",
+       "3533           5 2022-09-15 10:31:26.039  sevastopol  8.00    True    4.80   \n",
        "\n",
        "      priceMU area_size_category  \n",
-       "207      0.50                4-8  \n",
-       "2678     0.40                4-8  \n",
-       "80       0.30               8-20  "
+       "3949     0.89                4-8  \n",
+       "5356     1.10               8-20  \n",
+       "3533     0.60                4-8  "
       ]
      },
      "execution_count": 11,
@@ -368,26 +369,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4415 entries, 0 to 4414\n",
+      "RangeIndex: 5515 entries, 0 to 5514\n",
       "Data columns (total 14 columns):\n",
       " #   Column              Non-Null Count  Dtype         \n",
       "---  ------              --------------  -----         \n",
-      " 0   avito_id            4415 non-null   int64         \n",
-      " 1   title               4415 non-null   object        \n",
-      " 2   price               4415 non-null   int64         \n",
-      " 3   obj_name            4415 non-null   object        \n",
-      " 4   adr                 4415 non-null   object        \n",
-      " 5   description         4415 non-null   object        \n",
-      " 6   avito_page          4415 non-null   int64         \n",
-      " 7   ts                  4415 non-null   datetime64[ns]\n",
-      " 8   place               4415 non-null   object        \n",
-      " 9   area                4415 non-null   float64       \n",
-      " 10  is_IJS              4415 non-null   bool          \n",
-      " 11  priceM              4415 non-null   float64       \n",
-      " 12  priceMU             4415 non-null   float64       \n",
-      " 13  area_size_category  4415 non-null   category      \n",
+      " 0   avito_id            5515 non-null   int64         \n",
+      " 1   title               5515 non-null   object        \n",
+      " 2   price               5515 non-null   int64         \n",
+      " 3   obj_name            5515 non-null   object        \n",
+      " 4   adr                 5515 non-null   object        \n",
+      " 5   description         5515 non-null   object        \n",
+      " 6   avito_page          5515 non-null   int64         \n",
+      " 7   ts                  5515 non-null   datetime64[ns]\n",
+      " 8   place               5515 non-null   object        \n",
+      " 9   area                5515 non-null   float64       \n",
+      " 10  is_IJS              5515 non-null   bool          \n",
+      " 11  priceM              5515 non-null   float64       \n",
+      " 12  priceMU             5515 non-null   float64       \n",
+      " 13  area_size_category  5515 non-null   category      \n",
       "dtypes: bool(1), category(1), datetime64[ns](1), float64(3), int64(3), object(5)\n",
-      "memory usage: 422.9+ KB\n"
+      "memory usage: 528.1+ KB\n"
      ]
     }
    ],
@@ -413,7 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4415\n"
+      "5515\n"
      ]
     }
    ],
@@ -480,10 +481,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-15 23:10:42 | LocationUpdater: 9821 addresses in location table\n",
-      "[INFO    ] 2022-09-15 23:10:42 | LocationUpdater: 9821 addresses total\n",
-      "[INFO    ] 2022-09-15 23:10:42 | LocationUpdater: 9821 addresses defined\n",
-      "[INFO    ] 2022-09-15 23:10:42 | LocationUpdater: 0 addresses undefined\n"
+      "[INFO    ] 2022-09-16 15:33:31 | LocationUpdater: 10044 addresses in location table\n",
+      "[INFO    ] 2022-09-16 15:33:31 | LocationUpdater: 10055 addresses total\n",
+      "[INFO    ] 2022-09-16 15:33:31 | LocationUpdater: 10044 addresses defined\n",
+      "[INFO    ] 2022-09-16 15:33:31 | LocationUpdater: 11 addresses undefined\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "23c11c4ba34f42629d7e6c5b7cbd5c24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2022-09-16 15:33:34 | LocationUpdater: 11 new addresses found\n"
      ]
     }
    ],
@@ -541,24 +563,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5483</th>\n",
-       "      <td>улица Адмирала Макарова, 15/2</td>\n",
+       "      <th>9881</th>\n",
+       "      <td>Севастополь, район Нахимовский, Победа, проспект Победы, 59 к3</td>\n",
+       "      <td>44.58</td>\n",
+       "      <td>33.57</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2497</th>\n",
+       "      <td>Севастополь, район Гагаринский, Омега, улица Челнокова, 14/1</td>\n",
        "      <td>44.59</td>\n",
-       "      <td>33.52</td>\n",
+       "      <td>33.43</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3150</th>\n",
-       "      <td>Севастополь, Линкорная ул.</td>\n",
-       "      <td>44.59</td>\n",
-       "      <td>33.57</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6727</th>\n",
-       "      <td>ТСН СТ Морзаводец, Малиновая ул., 78</td>\n",
-       "      <td>44.54</td>\n",
-       "      <td>33.57</td>\n",
+       "      <th>7205</th>\n",
+       "      <td>территория ТСН Рыбак-7</td>\n",
+       "      <td>44.57</td>\n",
+       "      <td>33.44</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -566,10 +588,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                       adr  latitude  longitude  truncated\n",
-       "5483         улица Адмирала Макарова, 15/2     44.59      33.52      False\n",
-       "3150            Севастополь, Линкорная ул.     44.59      33.57      False\n",
-       "6727  ТСН СТ Морзаводец, Малиновая ул., 78     44.54      33.57      False"
+       "                                                                 adr  \\\n",
+       "9881  Севастополь, район Нахимовский, Победа, проспект Победы, 59 к3   \n",
+       "2497    Севастополь, район Гагаринский, Омега, улица Челнокова, 14/1   \n",
+       "7205                                          территория ТСН Рыбак-7   \n",
+       "\n",
+       "      latitude  longitude truncated  \n",
+       "9881     44.58      33.57       NaN  \n",
+       "2497     44.59      33.43     False  \n",
+       "7205     44.57      33.44     False  "
       ]
      },
      "execution_count": 17,
@@ -610,7 +637,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "всего записей: 4426\n",
+      "всего записей: 5529\n",
       "записей без геометки: 0\n"
      ]
     }
@@ -644,28 +671,28 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 4426 entries, 0 to 4425\n",
+      "Int64Index: 5529 entries, 0 to 5528\n",
       "Data columns (total 16 columns):\n",
       " #   Column              Non-Null Count  Dtype         \n",
       "---  ------              --------------  -----         \n",
-      " 0   avito_id            4426 non-null   int64         \n",
-      " 1   title               4426 non-null   object        \n",
-      " 2   price               4426 non-null   int64         \n",
-      " 3   obj_name            4426 non-null   object        \n",
-      " 4   adr                 4426 non-null   object        \n",
-      " 5   description         4426 non-null   object        \n",
-      " 6   avito_page          4426 non-null   int64         \n",
-      " 7   ts                  4426 non-null   datetime64[ns]\n",
-      " 8   place               4426 non-null   object        \n",
-      " 9   area                4426 non-null   float64       \n",
-      " 10  is_IJS              4426 non-null   bool          \n",
-      " 11  priceM              4426 non-null   float64       \n",
-      " 12  priceMU             4426 non-null   float64       \n",
-      " 13  area_size_category  4426 non-null   category      \n",
-      " 14  latitude            4426 non-null   float64       \n",
-      " 15  longitude           4426 non-null   float64       \n",
+      " 0   avito_id            5529 non-null   int64         \n",
+      " 1   title               5529 non-null   object        \n",
+      " 2   price               5529 non-null   int64         \n",
+      " 3   obj_name            5529 non-null   object        \n",
+      " 4   adr                 5529 non-null   object        \n",
+      " 5   description         5529 non-null   object        \n",
+      " 6   avito_page          5529 non-null   int64         \n",
+      " 7   ts                  5529 non-null   datetime64[ns]\n",
+      " 8   place               5529 non-null   object        \n",
+      " 9   area                5529 non-null   float64       \n",
+      " 10  is_IJS              5529 non-null   bool          \n",
+      " 11  priceM              5529 non-null   float64       \n",
+      " 12  priceMU             5529 non-null   float64       \n",
+      " 13  area_size_category  5529 non-null   category      \n",
+      " 14  latitude            5529 non-null   float64       \n",
+      " 15  longitude           5529 non-null   float64       \n",
       "dtypes: bool(1), category(1), datetime64[ns](1), float64(5), int64(3), object(5)\n",
-      "memory usage: 527.5+ KB\n"
+      "memory usage: 658.9+ KB\n"
      ]
     }
    ],
